create modules menu and add sortable js and renaming setting file

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "filepond-plugin-image-preview": "^4.6.12",
         "glob": "^11.0.3",
         "jquery": "^3.7.1",
-        "select2": "^4.1.0-rc.0"
+        "select2": "^4.1.0-rc.0",
+        "sortablejs": "^1.15.6"
     }
 }
