--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,8 @@
 /public/storage
 /storage/*.key
 /storage/pail
+/storage/app/public/*
+!/storage/app/public/.gitignore
 /vendor
 Homestead.json
 Homestead.yaml
